@@ -615,12 +615,22 @@ apr_status_t ajp_read_header(apr_socket_t *sock,
 {
     apr_byte_t result;
     apr_status_t rc;
-    
-    rc = ajp_msg_create(r->pool, msg);
-    if (rc != APR_SUCCESS) {
-        ap_log_error(APLOG_MARK, APLOG_ERR, 0, r->server,
-               "ajp_read_header: ajp_msg_create failed");
-        return rc;
+   
+    if (*msg) {
+        rc = ajp_msg_reuse(*msg);
+        if (rc != APR_SUCCESS) {
+            ap_log_error(APLOG_MARK, APLOG_ERR, 0, r->server,
+                   "ajp_read_header: ajp_msg_reuse failed");
+            return rc;
+        }
+    }
+    else {
+        rc = ajp_msg_create(r->pool, msg);
+        if (rc != APR_SUCCESS) {
+            ap_log_error(APLOG_MARK, APLOG_ERR, 0, r->server,
+                   "ajp_read_header: ajp_msg_create failed");
+            return rc;
+        }
     }
     ajp_msg_reset(*msg);
     rc = ajp_ilink_receive(sock, *msg);
