@@ -2,6 +2,9 @@
 Changes with Apache 2.3.0
   [Remove entries to the current 2.0 and 2.2 section below, when backported]
 
+  *) mod_proxy_ajp: Do not spool the entire response from AJP backend before
+     sending it up the filter chain. PR37100.  [Ruediger Pluem]
+
   *) core: AddOutputFilterByType is ignored for proxied requests. PR31226.
      [Joe Orton, Ruediger Pluem]
 
